<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/mod_group_name"
        android:hint="@string/new_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="14dp"
        android:layout_alignParentTop="true"
        />

    <EditText
        android:id="@+id/mod_group_icon"
        android:hint="@string/new_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/mod_group_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/mod_group_noti"
        android:hint="@string/new_noti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/mod_group_icon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/mod_group_save"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="save"
        android:layout_alignBaseline="@+id/mod_group_cancell"
        android:layout_alignBottom="@+id/mod_group_cancell"
        android:layout_toRightOf="@+id/mod_group_noti"
        android:layout_toEndOf="@+id/mod_group_noti"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp" />

    <Button
        android:id="@+id/mod_group_cancell"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Cancel"
        android:layout_below="@+id/mod_group_noti"
        android:layout_alignRight="@+id/mod_group_noti"
        android:layout_alignEnd="@+id/mod_group_noti"
        android:layout_marginRight="61dp"
        android:layout_marginEnd="61dp"
        android:layout_marginTop="49dp" />


</RelativeLayout>