<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/new_group"
        android:hint="@string/new_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/new_item_photo"
        android:layout_toStartOf="@+id/new_item_photo"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/new_item_photo_group"
        android:text="@string/upl_pho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/new_group_save"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/new_group_cancell"
        android:layout_alignBottom="@+id/new_group_cancell"
        android:layout_alignRight="@+id/new_group"
        android:layout_alignEnd="@+id/new_group"
        android:layout_marginRight="62dp"
        android:layout_marginEnd="62dp" />

    <Button
        android:id="@+id/new_group_cancell"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_below="@+id/new_group"
        android:layout_toRightOf="@+id/new_group"
        android:layout_toEndOf="@+id/new_group"
        android:layout_marginTop="36dp" />

</RelativeLayout>