<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_invite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mad.lab2.Invite_Activity">

    <TextView
        android:id="@+id/textView2"
        android:text="@string/insert_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/invite_text"
        android:layout_alignStart="@+id/invite_text" />

    <Button
        android:id="@+id/invite_button"
        android:text="@string/invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="invite_button"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/invite_text"
        android:layout_alignEnd="@+id/invite_text"
        android:layout_marginRight="60dp"
        android:layout_marginEnd="60dp" />

    <EditText
        android:id="@+id/invite_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:hint="@string/email" />
</RelativeLayout>
